--- a/README
+++ b/README
@@ -40,7 +40,7 @@ and on machine B there are clones of those 5 repositories A, B, C, D and E.
 	A B C D E
 	me@b$ for i in A B C D E ; do echo $i >> .mgit ; done
 
-	$me@a$ rid
+	me@a$ rid
 	foo
 	c7eaebf37d
 	6bb613ed8b
@@ -58,7 +58,7 @@ and on machine B there are clones of those 5 repositories A, B, C, D and E.
 	|                 |
 	+-----------------+
 
-	$me@b$ rid
+	me@b$ rid
 	foo
 	c7eaebf37d
 	6bb613ed8b
@@ -79,7 +79,7 @@ and on machine B there are clones of those 5 repositories A, B, C, D and E.
 More useful when I run it in a terminal that sits side by side (here the
 terminals are separated by a single pixel):
 
-$me@a$ rid -f              me@b$ rid
+me@a$ rid -f               me@b$ rid
                         foobar
                  d73fbeae7cc7eaebf37d
                  b8de316bb66bb613ed8b
